@@ -1,3 +1,9 @@
+2001-12-07  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* Defaults.py (MESSAGE_FROM_STYLE):  Add an `unquoted' option
+	which is similar to `angles' except that the fullname is not
+	double quoted.
+
 2001-12-04  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* Defaults.py (TMDA_VERSION): Begin 0.43 development.
